<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hospital Application</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    
    <string name="create_new_patient">Create New Patient</string>

    <string name="patient_info"> Patient Information </string>
    <string name="patient_name"> Name: </string>
    <string name="patient_dob"> Date of Birth: </string>
    <string name="patient_card"> Health Card Number: </string>
    <string name="patient_age"> Age: </string>
    <string name="patient_arrival_time"> Arrival Time: </string>
    
    <string name="vitals_insert_header"> Update Patient Vital Signs</string>
    <string name="vitals_insert_button"> Update</string>
    <string name="vitals_info"> Patient Vital Signs: </string>
    <string name="vitals_temp"> Temperature: </string>
    <string name="vitals_systolic_BP"> Systolic Blood Pressure: </string>
    <string name="vitals_diastolic_BP"> Diastolic Blood Pressure: </string>
    <string name="vitals_heart_rate"> Heart Rate: </string>
    
    <string name="patient_register">Register Patient</string>
    <string name="submit_patient">Submit</string>
    
</resources>
