<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_info"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <TextView
	        android:id="@+id/TVhcn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/patient_card" />
    <TextView
	        android:id="@+id/TVname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/patient_name" />
    <TextView
	        android:id="@+id/TVdob"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/patient_dob" />
    <TextView
	        android:id="@+id/TVarrivaltime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/patient_arrival_time" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitals_insert_header"
        android:textSize="20sp"
        android:textStyle="bold" />
    
 	<LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal">
 	    <TextView
	        android:id="@+id/TVtemperature"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/vitals_temp" />
 	    <EditText 
 	        android:id="@+id/ETtemperature"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        />
 	</LinearLayout>
 	
 	<LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal">
 	    <TextView
	        android:id="@+id/TVSystolicBP"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/vitals_systolic_BP" />
 	    <EditText 
 	        android:id="@+id/ETSystolicBP"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        />
 	</LinearLayout>
 	
 	<LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal">
 	    <TextView
	        android:id="@+id/TVDiastolicBP"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/vitals_diastolic_BP" />
 	    <EditText 
 	        android:id="@+id/ETDiastolicBP"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        />
 	</LinearLayout>
 	
 	<LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal">
 	    <TextView
	        android:id="@+id/TVHeartRate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/vitals_heart_rate" />
 	    <EditText
 	        android:id="@+id/ETHeartRate"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        />
 	</LinearLayout>
    
 	<Button 
 	    android:id="@+id/BTupdate_vital_signs"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/vitals_insert_button"/>
 	
 	<TextView
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/vitals_info"
 	    android:textSize="20sp"
 	    android:textStyle="bold"
 	    />
 	
 	<ListView
		android:id="@+id/LISTvitalSigns"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />"
	


    



   

</LinearLayout>
